# example_native_python_extension_written_rust

./: Cargo.toml  Makefile.in  configure.ac  readme.md
examples/: fibonacci_accelerate.py  fibonacci_pure_python.py
src/: lib.rs
