[package]
name = "fibonacci_number"
version = "0.1.0"
authors = ["FomalhautWeisszwerg"]
edition = "2018"

[lib]
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Reference:
#    https://pyo3.rs/v0.13.2/
name = "fibonacci_number"
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.13.2"
features = ["extension-module"]

[build-system]
requires = ["maturin=0.10.6"]
build-backend = "maturin"
